package(default_visibility = ["//visibility:public"])

exports_files([
    "VERSION",
    "babel.config.js",
    "tsconfig.json",
    "package.json",
    "jest.config.js",
    ".eslintrc.js",
    ".prettierrc",
    "README.md",
    ".all-contributorsrc",
    "webpack.config.js",
])

filegroup(
    name = "typings",
    srcs = glob(["typings/*"]),
)
