load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")
load("@rules_kotlin//kotlin:lint.bzl", "ktlint_config", "ktlint_fix", "ktlint_test")

package(default_visibility = ["//visibility:public"])

ktlint_config(
    name = "ktlint_config",
    editorconfig = ".editorconfig",
)

kt_jvm_library(
    name = "kotlin-dsl",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    kotlinc_opts = "//:kt_opts",
    deps = [
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json",
    ],
)

kt_jvm_test(
    name = "kotlin-dsl-test",
    srcs = glob(["src/test/kotlin/**/*.kt"]),
    kotlinc_opts = "//:kt_opts",
    args = [
        "--select-class=com.intuit.playertools.fluent.IdGeneratorTest",
        "--select-class=com.intuit.playertools.fluent.FluentBuilderBaseTest",
        "--select-class=com.intuit.playertools.fluent.FlowTest",
        "--select-class=com.intuit.playertools.fluent.IntegrationTest",
        "--select-class=com.intuit.playertools.fluent.StandardExpressionsTest",
    ],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    deps = [
        ":kotlin-dsl",
        "@maven//:io_kotest_kotest_assertions_core",
        "@maven//:io_kotest_kotest_assertions_json",
        "@maven//:io_kotest_kotest_runner_junit5",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_junit_platform_junit_platform_console",
    ],
)

ktlint_test(
    name = "ktlint",
    srcs = glob([
        "src/main/kotlin/**/*.kt",
        "src/test/kotlin/**/*.kt",
    ]),
    config = ":ktlint_config",
)

ktlint_fix(
    name = "ktlint_fix",
    srcs = glob([
        "src/main/kotlin/**/*.kt",
        "src/test/kotlin/**/*.kt",
    ]),
    config = ":ktlint_config",
)
